add new documentation pages to mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,8 @@ repo_name: charlesreid1/how-do-i-snakemake
 repo_url: https://github.com/charlesreid1/how-do-i-snakemake
 edit_uri: ""
 
-copyright: 'Copyright &copy; 2018 <a href="https://charlesreid1.com">Charles Reid</a>, released under the <a href="https://opensource.org/licenses/MIT">MIT license</a>'
+copyright: 'Copyright &copy; 2018 <a href="https://charlesreid1.com">Charles Reid</a>, released under the <a href="https://opensource.org/licenses/MIT">MIT license</a> <br /><br />
+<div>Snake icon made by Freepik, obtained from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>, used under a <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> license.'
 
 docs_dir: docs
 site_dir: site
@@ -16,13 +17,15 @@ theme:
   palette:
     primary: 'indigo'
     accent: 'indigo'
-  logo:
-    icon: 'help'
+  logo: 'images/snake.svg'
   font:
     text: 'Bitter'
     code: 'PT Mono'
 pages:
   - "Index" : "index.md"
+  - "Installing Snakemake" : "installing.md"
+  - "Snakemake Terminology" : "terminology.md"
+  - "Converting Workflows to Snakemake" : "converting.md"
 
 # Extensions
 markdown_extensions:
