fix url for top left icon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: how do I snakemake?
-site_url: https://pages.charlesreid1.com/how-do-i-snakemake
+site_url: https://charlesreid1.github.io/how-do-i-snakemake
 repo_name: charlesreid1/how-do-i-snakemake
 repo_url: https://github.com/charlesreid1/how-do-i-snakemake
 edit_uri: ""
