update links to point to charlesreid1.com

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: how do I snakemake?
-site_url: https://charlesreid1.github.io/how-do-i-snakemake
+site_url: https://pages.charlesreid1.com/how-do-i-snakemake
 repo_name: charlesreid1/how-do-i-snakemake
-repo_url: https://github.com/charlesreid1/how-do-i-snakemake
+repo_url: https://git.charlesreid1.com/charlesreid1/how-do-i-snakemake
 edit_uri: ""
 
 copyright: 'Copyright &copy; 2018 <a href="https://charlesreid1.com">Charles Reid</a>, released under the <a href="https://opensource.org/licenses/MIT">MIT license</a> <br /><br />
